@@ -1,4 +1,4 @@
-AC_INIT(libuhuru,1.3.0,francois@dechelle.net)
+AC_INIT(libuhuru,1.3.1,francois@dechelle.net)
 AM_INIT_AUTOMAKE
 
 # collect arguments
