@@ -23,13 +23,13 @@ void conf_load(struct uhuru_module *mod)
   asprintf(&filename, "%s.conf", mod->name);
 
   if (!g_key_file_load_from_dirs(key_file, filename, (const gchar **)dirs, NULL, G_KEY_FILE_NONE, NULL)) {
-    fprintf(stderr, "cannot load conf file %s\n", mod->name);
+    g_log(NULL, G_LOG_LEVEL_WARNING, "cannot load conf file %s", mod->name);
     return;
   }
 
   keys = g_key_file_get_keys(key_file, mod->name, NULL, NULL);
   if (keys == NULL) {
-    fprintf(stderr, "cannot find group %s\n", mod->name);
+    g_log(NULL, G_LOG_LEVEL_WARNING, "cannot find group %s", mod->name);
     return;
   }
 
@@ -50,18 +50,22 @@ void conf_set(struct uhuru *uhuru, const char *mod_name, const char *key, const 
 {
   struct uhuru_module *mod = uhuru_get_module_by_name(uhuru, mod_name);
 
-  if (mod != NULL)
-    (*mod->conf_set)(mod->data, key, value);
-  else
-    fprintf(stderr, "No such module: %s\n", mod_name);
+  if (mod == NULL) {
+    g_log(NULL, G_LOG_LEVEL_WARNING, "No such module: %s", mod_name);
+    return;
+  }
+
+  (*mod->conf_set)(mod->data, key, value);
 }
 
 char *conf_get(struct uhuru *uhuru, const char *mod_name, const char *key)
 {
   struct uhuru_module *mod = uhuru_get_module_by_name(uhuru, mod_name);
 
-  if (mod != NULL)
-    return (*mod->conf_get)(mod->data, key);
+  if (mod == NULL) {
+    g_log(NULL, G_LOG_LEVEL_WARNING, "No such module: %s", mod_name);
+    return;
+  }
 
-  return NULL;
+  return (*mod->conf_get)(mod->data, key);
 }
