@@ -53,15 +53,14 @@ struct uhuru_module *module_new(const char *path)
 
   module = g_module_open(path, G_MODULE_BIND_LAZY);
 
-  if (!module) {
-    fprintf(stderr, "unable to open %s\n", path);
+  if (!module)
     return NULL;
-  }
 
   mod->name = module_name_from_path(path);
   mod->data = NULL;
   mod->mod_status = UHURU_MOD_OK;
 
+  /* FIXME: must check if module contains essential symbols */
   mod->conf_set = get_symbol(module, mod->name, "conf_set");
   mod->conf_get = get_symbol(module, mod->name, "conf_get");
   mod->init = get_symbol(module, mod->name, "init");
@@ -77,18 +76,18 @@ struct uhuru_module *module_new(const char *path)
   return mod;
 }
 
-void module_print(struct uhuru_module *mod, FILE *out)
+void module_debug(struct uhuru_module *mod)
 {
-  fprintf(out, "name: %s\n", mod->name);
-  fprintf(out, "init: %p\n", mod->init);
-  fprintf(out, "scan: %p\n", mod->scan);
-  fprintf(out, "close: %p\n", mod->close);
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "name: %s", mod->name);
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "init: %p", mod->init);
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "scan: %p", mod->scan);
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "close: %p", mod->close);
 
   if (mod->mime_types != NULL) {
     const char **p;
 
     for (p = mod->mime_types; *p != NULL; p++)
-      fprintf(out, "mime type: %s\n", *p);
+      g_log(NULL, G_LOG_LEVEL_DEBUG, "mime type: %s", *p);
   }
 }
 
